Employee Module with css fixes

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -2,7 +2,7 @@
   <section class="vbox">
     <section class="scrollable padder">
       <ul class="breadcrumb no-border no-radius b-b b-light pull-in">
-        <li><a href="index.html"><i class="fa fa-home"></i> Home</a></li>
+        <li><a href="<%= "#" %>"><i class="fa fa-home"></i> Home</a></li>
         <li class="active"><%= current_user.company_name.titleize %></li>
       </ul>
       <div class="m-b-md">
