--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,3 +1,30 @@
+<section id="content ">
+  <section class="scrollable padder">
+    <ul class="breadcrumb no-border no-radius b-b b-light pull-in">
+      <li><a href="<%= users_path %>"><i class="fa fa-user"></i> Employees</a></li>
+      <li class="active">Edit</li>
+    </ul>
+  </section>
+  <section class="vbox">
+    <section class="scrollable padder m-t-lg">
+      <div class="col-sm-12">
+        <section class="panel panel-default" >
+          <header class="panel-heading" style="background:#FFF;">
+            <h3 style="color:#717171;">Employee Details</h3>
+          </header>
+          <div class="panel-body">
 <%= form_for(@user) do |f| %>
 	<%= render 'form', :locals=>{:f=>f} %>
 <% end %>
+          </div>
+        </section>
+      </div>
+    </section>
+  </section>
+  <a href="#" class="hide nav-off-screen-block" data-toggle="class:nav-off-screen" data-target="#nav"></a>
+</section>
+
+<script>
+    $('#new_user').validate();
+</script>
+
