--- a/app/views/sales/shared/_searched_items.html.erb
+++ b/app/views/sales/shared/_searched_items.html.erb
@@ -1,7 +1,7 @@
-<h4 class="text-primary"><span class="glyphicon glyphicon-tags"></span> Searched Items</h4>
+<h4 class="text-info"><span class="glyphicon glyphicon-tags"></span> Searched Items</h4>
 <hr />
 <div class="table-responsive">
-  <table class="table table-striped table-bordered table-hover">
+  <table class="table table-bordered table-hover">
     <thead>
       <tr>
         <th>#</th>
