--- a/app/views/template/_menu.html.erb
+++ b/app/views/template/_menu.html.erb
@@ -3,7 +3,7 @@
     <a class="btn btn-link visible-xs" data-toggle="class:nav-off-screen,open" data-target="#nav,html">
       <i class="fa fa-bars"></i>
     </a>
-    <a href="#" class="navbar-brand" data-toggle="fullscreen"><%= image_tag('logo.png' ,  class: 'm-r-sm') %></a>
+    <a href="#" class="navbar-brand" data-toggle="fullscreen"><%= image_tag('logo.png' ,  class: 'm-r-sm' , style: "min-height: 30px") %></a>
     <a class="btn btn-link visible-xs" data-toggle="dropdown" data-target=".nav-user">
       <i class="fa fa-cog"></i>
     </a>
