--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,47 +1,29 @@
-<!-- header -->
-
-<header id="header" class="navbar navbar-fixed-top bg-white box-shadow b-b b-light"  data-spy="affix" data-offset-top="1">
-  <div class="container">
-    <div class="navbar-header">
-      <a href="#" class="navbar-brand"><img src="<%=asset_path('logo.png')%>" class="m-r-sm"><span class="text-muted"></span></a>
-      <button class="btn btn-link visible-xs" type="button" data-toggle="collapse" data-target=".navbar-collapse">
-        <i class="fa fa-bars"></i>
-      </button>
-    </div>
-    <div class="collapse navbar-collapse">
-      <ul class="nav navbar-nav navbar-right">
-        <li>
-          <div class="m-t-sm"> <a href="<%=new_user_session_path%>" class="btn btn-sm btn-info m-l"><strong>Sign in</strong></a></div>
-        </li>
-      </ul>
-    </div>
-  </div>
-</header>
-<!-- / header -->
+<%= render 'template/landing_header' %>
 <section id="content">
   <div class="bg-info dk">
     <div class="text-center wrapper">
       <div class="m-t-xl m-b-xl">
         <div class="text-uc h1 font-bold inline">
           <div class="pull-left m-r-sm text-white">The POS software <span class="font-thin "> that’s</span></div>
-          <div class="carousel slide carousel-fade inline auto aside text-left pull-left pull-none-xs" data-interval="2000">
-            <div class="carousel-inner">
-              <div class="item active text-warning">
-                Simple
+              <div class="carousel slide carousel-fade inline auto aside text-left pull-left pull-none-xs" data-interval="2000">
+                <div class="carousel-inner">
+                  <div class="item active text-warning">
+                    Simple
+                  </div>
+                  <div class="item text-dark">
+                    Fast
+                  </div>
+                  <div class="item">
+                    Free
+                  </div>
+                </div>
               </div>
-              <div class="item text-dark">
-                Fast
-              </div>
-              <div class="item">
-                Free
-              </div>
-            </div>
-          </div>
         </div>
-        <div class="h4  m-t-sm"></div>
+        <!--<div class="h4 m-t-sm" style="color: #d1efef!important;">Tending Your Business To Greatness</div>-->
+        <!--<div class="h4  m-t-sm"></div>-->
       </div>
       <p class="text-center m-b-xl">
-        <a href="<%=new_company_path%>" target="_blank" class="btn btn-lg btn-warning b-white bg-empty m-sm">Sign up</a>
+        <a href="<%=new_company_path%>" target="_blank" class="btn btn-lg btn-warning b-white bg-empty m-sm">Get Started</a>
       </p>
     </div>
     <div class="padder">
@@ -89,7 +71,7 @@
     <div class="dker pos-rlt">
       <div class="container wrapper">
         <div class="m-t-lg m-b-lg text-center">
-
+                TENDING YOUR BUSINESS TO GREATNESS
         </div>
       </div>
     </div>
@@ -107,7 +89,7 @@
           </p>
           <div class="">
             <h4 class="m-t-none"></h4>
-            <p class="text-muted m-t-lg"> Tender360 is the point of sale that takes care of digital receipts, inventory, and sales reports and provides valuable analytics and feedback so you can focus on your customers.</p>
+            <p class="text-muted m-t-lg"> Tend360 is the point of sale that takes care of digital receipts, inventory, and sales reports and provides valuable analytics and feedback so you can focus on your customers.</p>
           </div>
         </div>
         <div class="col-sm-4" data-ride="animated" data-animation="fadeInLeft" data-delay="600">
@@ -116,7 +98,7 @@
           </p>
           <div class="">
             <h4 class="m-t-none"></h4>
-            <p class="text-muted m-t-lg"> Tender360 serves businesses big and small, from corner bakeries to retailers around the world. It works with hardware and software accessories that make it easier to run your business.</p>
+            <p class="text-muted m-t-lg"> Tend360 serves businesses big and small, from corner bakeries to retailers around the world. It works with hardware and software accessories that make it easier to run your business.</p>
           </div>
         </div>
         <div class="col-sm-4" data-ride="animated" data-animation="fadeInLeft" data-delay="900">
@@ -130,9 +112,9 @@
         </div>
       </div>
       <div class="m-t-xl m-b-xl text-center wrapper">
-        <p class="h3">Download Tendor 360</p>
+        <p class="h3">Download Tend360</p>
           <br>
-          <span class="text-info h4">Tender 360 is available in the</span>
+          <span class="text-info h4">Tend360 is available in the</span>
           <span class="text-info h4">App Store</span>
           <span class="text-muted h5">and</span>
           <span class="text-info h4 ">Google Play.</span>
