--- a/app/views/sales/edit.html.erb
+++ b/app/views/sales/edit.html.erb
@@ -1,3 +1,67 @@
-<div class="sale_form_details">
-	<%= render 'sales/shared/form' %>
-</div>
+<section id="content">
+  <section class="hbox stretch">
+    <aside class="aside-md bg-white b-r hide" id="subNav">
+      <div class="wrapper b-b header">SALES</div>
+      <ul class="nav">
+        <li class="b-b b-light"><a href="#"><i class="fa fa-chevron-right pull-right m-t-xs text-xs icon-muted"></i>Total Sales</a></li>
+        <li class="b-b b-light"><a href="#"><i class="fa fa-chevron-right pull-right m-t-xs text-xs icon-muted"></i>Today Sales</a></li>
+      </ul>
+    </aside>
+    <aside>
+      <section class="vbox">
+        <header class="header bg-white b-b clearfix">
+          <div class="row m-t-sm">
+            <div class="col-sm-8 m-b-xs">
+              <a href="#subNav" data-toggle="class:hide" class="btn btn-sm btn-default"><i class="fa fa-caret-right text fa-lg"></i><i class="fa fa-caret-left text-active fa-lg"></i></a>
+              <div class="btn-group">
+                <button type="button" class="btn btn-sm btn-default" title="Refresh"><i class="fa fa-refresh"></i></button>
+                <button type="button" class="btn btn-sm btn-default" title="Remove"><i class="fa fa-trash-o"></i></button>
+                <button type="button" class="btn btn-sm btn-default" title="Filter" data-toggle="dropdown"><i class="fa fa-filter"></i> <span class="caret"></span></button>
+                <ul class="dropdown-menu">
+                  <li><a href="#">Action</a></li>
+                  <li><a href="#">Another action</a></li>
+                  <li><a href="#">Something else here</a></li>
+                  <li class="divider"></li>
+                  <li><a href="#">Separated link</a></li>
+                </ul>
+              </div>
+              <a href="modal.html" data-toggle="ajaxModal" class="btn btn-sm btn-default"><i class="fa fa-plus"></i> Create</a>
+              <a href="#customItem" data-toggle="modal" data-target="#customItem" class="btn btn-sm btn-info" title="Create New Custom Item"><i class="fa fa-plus pull-left"></i>Custom Item</a>
+              <a href="#customCustomer" data-toggle="modal" data-target="#customCustomer" class="btn btn-sm btn-warning" title="Create New Customer"><i class="fa fa-plus pull-left"></i> Customer</a>
+
+            </div>
+          </div>
+        </header>
+        <section class="scrollable wrapper w-f">
+          <!--<section class="panel panel-default">-->
+            <div class="sale_form_details">
+              <%= render 'sales/shared/form' %>
+            </div>
+          <!--</section>-->
+        </section>
+        <footer class="footer bg-white b-t">
+          <div class="row text-center-xs">
+            <!--<div class="col-md-6 hidden-sm">-->
+              <!--<p class="text-muted m-t">Showing 20-30 of 50</p>-->
+            <!--</div>-->
+            <!--<div class="col-md-6 col-sm-12 text-right text-center-xs">-->
+              <!--<ul class="pagination pagination-sm m-t-sm m-b-none">-->
+                <!--<li><a href="#"><i class="fa fa-chevron-left"></i></a></li>-->
+                <!--<li class="active"><a href="#">1</a></li>-->
+                <!--<li><a href="#">2</a></li>-->
+                <!--<li><a href="#">3</a></li>-->
+                <!--<li><a href="#">4</a></li>-->
+                <!--<li><a href="#">5</a></li>-->
+                <!--<li><a href="#"><i class="fa fa-chevron-right"></i></a></li>-->
+              <!--</ul>-->
+            <!--</div>-->
+          </div>
+        </footer>
+      </section>
+    </aside>
+  </section>
+  <a href="#" class="hide nav-off-screen-block" data-toggle="class:nav-off-screen" data-target="#nav"></a>
+</section>
+
+
+
