--- a/app/views/sales/index.html.erb
+++ b/app/views/sales/index.html.erb
@@ -46,4 +46,4 @@
 <br>
 
 
-<%= link_to 'New Sale', new_sale_path, :class => "btn btn-success btn-lg active" %>
+<%= link_to 'New Sale', new_sale_path, :class => "btn btn-info btn-lg active" %>
