--- a/app/views/sales/shared/_form.html.erb
+++ b/app/views/sales/shared/_form.html.erb
@@ -1,6 +1,6 @@
-<div class="panel panel-default">
-  <div class="panel-heading">#<span class="sale_id"><%= @sale.id %>, Created: <%= @sale.created_at.strftime("%m/%d/%y %I:%M:%S %p")  %>, Last Edited: <%= @sale.updated_at.strftime("%m/%d/%y %I:%M:%S %p")  %></span></div> 
-    <div class="panel-body">
+<!--<div class="panel panel-default">-->
+  <!--<div class="">#<span class="sale_id"><%#= @sale.id %>, Created: <%#= @sale.created_at.strftime("%m/%d/%y %I:%M:%S %p")  %>, Last Edited: <%#= @sale.updated_at.strftime("%m/%d/%y %I:%M:%S %p")  %></span></div> -->
+    <!--<div class="panel-body">-->
       
       <!-- Nav tabs -->
       <ul class="nav nav-tabs hidden-print">
@@ -28,7 +28,4 @@
         </div>
 
         <%= render :partial => 'sales/shared/modals' %>
-      
-    </div>
-  </div>
-</div>
+        </div>
