--- a/app/views/sales/shared/_sale_totals.html.erb
+++ b/app/views/sales/shared/_sale_totals.html.erb
@@ -1,9 +1,9 @@
-<h4 class="text-primary"><span class="glyphicon"><%= config.currency %></span> Sale Totals</h4>
+<h4 class="text-info"><span class="glyphicon"><%= current_company.currency %></span> Sale Totals</h4>
 <hr />
 
 <label>Base Price</label>
 <div class="input-group">
-  <span class="input-group-addon"><%=config.currency %></span>
+  <span class="input-group-addon"><%=current_company.currency %></span>
   <input type="text" class="form-control" readonly value=<%= number_to_currency(@sale.amount, unit: '') %>>
 </div>
 
@@ -19,17 +19,17 @@
   		</option>
   	<% end %>
   </select>
-  <span class="input-group-addon"><%=config.currency %><%= @sale.discount.blank? ? 0 : number_to_currency(@sale.get_discounted_amount, unit: '') %></span>
+  <span class="input-group-addon"><%=current_company.currency %><%= @sale.discount.blank? ? 0 : number_to_currency(@sale.get_discounted_amount, unit: '') %></span>
 </div>
 
-<label>Tax(<%= config.tax_rate.blank? ? 'not configured' : config.tax_rate %>)</label>
+<label>Tax(<%= current_company.tax_rate.blank? ? 'not configured' : current_company.tax_rate %>)</label>
 <div class="input-group">
-  <span class="input-group-addon"><%=config.currency %></span>
+  <span class="input-group-addon"><%=current_company.currency %></span>
   <input type="text" class="form-control" readonly value=<%= number_to_currency(@sale.tax, unit: '') %>>
 </div>
 <hr />
 
-<label class="text-success">Total Price</label>
+<label class="text-info">Total Price</label>
 <div class="input-group has-success total_price_output">
   <span class="input-group-addon price_output"><%=config.currency %></span>
   <input type="text" class="form-control price_output" readonly value=<%= number_to_currency(@sale.total_amount, unit: '') %>>
