--- a/app/views/sales/shared/_searched_customers.html.erb
+++ b/app/views/sales/shared/_searched_customers.html.erb
@@ -1,4 +1,4 @@
-<h4 class="text-primary"><span class="glyphicon glyphicon-tags"></span> Customers</h4>
+<h4 class="text-info"><span class="glyphicon glyphicon-tags"></span> Customers</h4>
 <hr />
 <div class="table-responsive">
   <table class="table table-striped table-bordered table-hover">
