--- a/app/views/template/_left_aside.html.erb
+++ b/app/views/template/_left_aside.html.erb
@@ -47,7 +47,7 @@
                 <i class="fa fa-rocket icon">
                   <b class="bg-success"></b>
                 </i>
-                <span>sales</span>
+                <span>Expenses</span>
               </a>
             </li>
             <li >
