set role_id before company create

--- a/app/views/template/_footer.html.erb
+++ b/app/views/template/_footer.html.erb
@@ -3,8 +3,8 @@
     <div class="container wrapper">
       <div class="m-t-xl m-b">
         For your faster and easier web development.
-        <a href="http://themeforest.net/user/Flatfull/portfolio?ref=flatfull" target="_blank" class="btn btn-lg btn-dark b-white bg-empty m-sm">Download it</a>
-        <a href="index.html" target="_blank" class="btn btn-lg btn-warning b-white bg-empty m-sm">Live Preview</a>
+        <a href="#" target="_blank" class="btn btn-lg btn-dark b-white bg-empty m-sm">Download it</a>
+        <a href="#" target="_blank" class="btn btn-lg btn-warning b-white bg-empty m-sm">Live Preview</a>
       </div>
     </div>
     <i class="fa fa-caret-down fa-4x text-info m-b-n-lg block"></i>
@@ -22,7 +22,7 @@
         <div class="col-sm-4 fadeInUp animated" data-ride="animated" data-animation="fadeInUp" data-delay="600">
           <i class="fa fa-envelope-o fa-3x icon-muted"></i>
           <h5 class="text-uc m-b m-t-lg">Mail Us</h5>
-          <p class="text-sm"><a href="mailto:hey@example.com">info@example.com</a></p>
+          <p class="text-sm"><a href="mailto:hey@example.com">info@tend360.com</a></p>
         </div>
         <div class="col-sm-4 fadeInRight animated" data-ride="animated" data-animation="fadeInRight" data-delay="900">
           <i class="fa fa-globe fa-3x icon-muted"></i>
