--- a/app/views/template/_footer.html.erb
+++ b/app/views/template/_footer.html.erb
@@ -1,33 +1,33 @@
 <footer id="footer">
   <div class="bg-info text-center">
     <div class="container wrapper">
-      <div class="m-t-xl m-b">
-        For your faster and easier web development.
-        <a href="#" target="_blank" class="btn btn-lg btn-dark b-white bg-empty m-sm">Download it</a>
-        <a href="#" target="_blank" class="btn btn-lg btn-warning b-white bg-empty m-sm">Live Preview</a>
-      </div>
+      <!--<div class="m-t-xl m-b">-->
+        <!--For your faster and easier web development.-->
+        <!--<a href="#" target="_blank" class="btn btn-lg btn-dark b-white bg-empty m-sm">Download it</a>-->
+        <!--<a href="#" target="_blank" class="btn btn-lg btn-warning b-white bg-empty m-sm">Live Preview</a>-->
+      <!--</div>-->
     </div>
     <i class="fa fa-caret-down fa-4x text-info m-b-n-lg block"></i>
   </div>
   <div class="bg-dark dker wrapper">
     <div class="container text-center m-t-lg">
       <div class="row m-t-xl m-b-xl">
-        <div class="col-sm-4 fadeInLeft animated" data-ride="animated" data-animation="fadeInLeft" data-delay="300">
+        <div class="col-sm-4" data-ride="animated" data-animation="fadeInLeft" data-delay="300">
           <i class="fa fa-map-marker fa-3x icon-muted"></i>
           <h5 class="text-uc m-b m-t-lg">Find Us</h5>
           <p class="text-sm">23 soe Midlokls <br>
             120002 Loki — UNITED KINGDOM
           </p>
         </div>
-        <div class="col-sm-4 fadeInUp animated" data-ride="animated" data-animation="fadeInUp" data-delay="600">
+        <div class="col-sm-4" data-ride="animated" data-animation="fadeInUp" data-delay="600">
           <i class="fa fa-envelope-o fa-3x icon-muted"></i>
           <h5 class="text-uc m-b m-t-lg">Mail Us</h5>
-          <p class="text-sm"><a href="mailto:hey@example.com">info@tend360.com</a></p>
+          <p class="text-sm"><a href="mailto:info@tend360.com">info@tend360.com</a></p>
         </div>
-        <div class="col-sm-4 fadeInRight animated" data-ride="animated" data-animation="fadeInRight" data-delay="900">
-          <i class="fa fa-globe fa-3x icon-muted"></i>
+        <div class="col-sm-4" data-ride="animated" data-animation="fadeInRight" data-delay="900">
+          <i class="fa fa-globe fa-3x icon-ifo"></i>
           <h5 class="text-uc m-b m-t-lg">Join Us</h5>
-          <p class="text-sm">Send your resume to <br><a href="mailto:hey@example.com">recruit@example.com</a></p>
+          <!--<p class="text-sm">Send your resume to <br><a href="mailto:hey@example.com">recruit@example.com</a></p>-->
         </div>
       </div>
       <div class="m-t-xl m-b-xl">
