add customers module

--- a/app/views/sales/edit.html.erb
+++ b/app/views/sales/edit.html.erb
@@ -15,17 +15,16 @@
               <a href="#subNav" data-toggle="class:hide" class="btn btn-sm btn-default"><i class="fa fa-caret-right text fa-lg"></i><i class="fa fa-caret-left text-active fa-lg"></i></a>
               <div class="btn-group">
                 <button type="button" class="btn btn-sm btn-default" title="Refresh"><i class="fa fa-refresh"></i></button>
-                <button type="button" class="btn btn-sm btn-default" title="Remove"><i class="fa fa-trash-o"></i></button>
-                <button type="button" class="btn btn-sm btn-default" title="Filter" data-toggle="dropdown"><i class="fa fa-filter"></i> <span class="caret"></span></button>
-                <ul class="dropdown-menu">
-                  <li><a href="#">Action</a></li>
-                  <li><a href="#">Another action</a></li>
-                  <li><a href="#">Something else here</a></li>
-                  <li class="divider"></li>
-                  <li><a href="#">Separated link</a></li>
-                </ul>
+                <!--<button type="button" class="btn btn-sm btn-default" title="Remove"><i class="fa fa-trash-o"></i></button>-->
+                <!--<button type="button" class="btn btn-sm btn-default" title="Filter" data-toggle="dropdown"><i class="fa fa-filter"></i> <span class="caret"></span></button>-->
+                <!--<ul class="dropdown-menu">-->
+                  <!--<li><a href="#">Action</a></li>-->
+                  <!--<li><a href="#">Another action</a></li>-->
+                  <!--<li><a href="#">Something else here</a></li>-->
+                  <!--<li class="divider"></li>-->
+                  <!--<li><a href="#">Separated link</a></li>-->
+                <!--</ul>-->
               </div>
-              <a href="modal.html" data-toggle="ajaxModal" class="btn btn-sm btn-default"><i class="fa fa-plus"></i> Create</a>
               <a href="#customItem" data-toggle="modal" data-target="#customItem" class="btn btn-sm btn-info" title="Create New Custom Item"><i class="fa fa-plus pull-left"></i>Custom Item</a>
               <a href="#customCustomer" data-toggle="modal" data-target="#customCustomer" class="btn btn-sm btn-warning" title="Create New Customer"><i class="fa fa-plus pull-left"></i> Customer</a>
 
