left nav bar fixes

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -17,8 +17,8 @@
                       <i class="fa fa-male fa-stack-1x text-white"></i>
                     </span>
             <a class="clear" href="#">
-              <span class="h3 block m-t-xs"><strong>52,000</strong></span>
-              <small class="text-muted text-uc"></small>
+              <span class="h3 block m-t-xs"><strong><%= current_company.customers.count %></strong></span>
+              <small class="text-muted text-uc">Customers</small>
             </a>
           </div>
           <div class="col-sm-6 col-md-3 padder-v b-r b-light lt">
