--- a/app/views/template/_left_aside.html.erb
+++ b/app/views/template/_left_aside.html.erb
@@ -104,7 +104,7 @@
 
             <% if current_user.can_update_users  == true %>
                 <li  class="<%= "#"  %>">
-                  <a href="<%= "#" %>"  class="<%= "#"  %>" >
+                  <a href="<%= sales_path %>"  class="<%= "#"  %>" >
                     <i class="fa fa-user icon">
                       <b class="bg-danger"></b>
                     </i>
