--- a/app/views/template/_left_aside.html.erb
+++ b/app/views/template/_left_aside.html.erb
@@ -50,12 +50,12 @@
                 <span>Expenses</span>
               </a>
             </li>
-            <li >
-              <a href="#" class="<% item_categories_active%>" >
+            <li class="<% reports_active%>" >
+              <a href="<%= reports_path %>" class="<% reports_active%>" >
                 <i class="fa fa-pencil-square-o icon">
                   <b class="bg-info"></b>
                 </i>
-                <span>Reports</span>
+                <span>REPORTS</span>
               </a>
             </li>
 
