--- a/app/views/sales/index.html.erb
+++ b/app/views/sales/index.html.erb
@@ -1,49 +1,93 @@
-<div class="panel panel-default">
-  <div class="table-responsive">
-    <table class="table table-striped table-bordered table-hover">
-      <thead>
-        <tr>
-          <th>#</th>
-          <th>Created</th>
-          <th>Customer</th>
-          <th>Total</th>
-          <th>Tax</th>
-          <th>Paid</th>
-          <th>Balance</th>
-          <th></th>
-        </tr>
-      </thead>
+<section id="content">
+  <section class="hbox stretch">
+    <aside>
 
-      <tbody>
-        <% @sales.each do |sale| %>
-          <tr class="<%= sale.remaining_balance == 0.00 && !sale.total_amount.blank? ? 'success' : '' %>">
-            <td><%= sale.id %></td>
-            <td><%= sale.created_at.strftime("%m/%d/%y %I:%M:%S %p")  %></td>
-            <td><%= sale.customer.blank? ? '-' : sale.customer.last_name %></td>
-            <td><%= number_to_currency(sale.total_amount, unit: config.currency) %></td>
-            <td><%= number_to_currency(sale.tax, unit: config.currency) %></td>
-            <td><%= number_to_currency(sale.paid_total, unit: config.currency) %></td>
-            <td><%= sale.remaining_balance == 0.00 && sale.payments.count > 0 ? "Paid" : "#{number_to_currency(sale.remaining_balance, unit: config.currency)}" %></td>
-            <td><%= link_to 'Show', edit_sale_path(sale) %> | <%= link_to 'Destroy', sale, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-          </tr>
-        <% end %>
-      </tbody>
-    </table>
-    <div class="panel-body">
-        <%= will_paginate @sales, renderer: BootstrapPagination::Rails %>
-      </div>
-  </div>
-</div>
-
-<div class="panel panel-default">
-  <!-- Default panel contents -->
-  <div class="panel-heading">Summary</div>
-
-  <!-- Table -->
-  <%= render :partial => 'template/sales_summary' %>
-</div>
-
-<br>
+      <section class="vbox">
 
 
-<%= link_to 'New Sale', new_sale_path, :class => "btn btn-info btn-lg active" %>
+        <header class="header bg-white b-b clearfix">
+          <div class="row m-t-sm">
+            <div class="col-sm-8 m-b-xs">
+              <!--<a href="#subNav" data-toggle="class:hide" class="btn btn-sm btn-default active"><i class="fa fa-caret-right text fa-lg"></i><i class="fa fa-caret-left text-active fa-lg"></i></a>-->
+              <div class="btn-group">
+                <button type="button" class="btn btn-sm btn-default" title="Refresh"><i class="fa fa-refresh"></i></button>
+                <!--<button type="button" class="btn btn-sm btn-default" title="Remove"><i class="fa fa-trash-o"></i></button>-->
+                <!--<button type="button" class="btn btn-sm btn-default" title="Filter" data-toggle="dropdown"><i class="fa fa-filter"></i> <span class="caret"></span></button>-->
+                <!--<ul class="dropdown-menu">-->
+                <!--<li><a href="#">Action</a></li>-->
+                <!--<li><a href="#">Another action</a></li>-->
+                <!--<li><a href="#">Something else here</a></li>-->
+                <!--<li class="divider"></li>-->
+                <!--<li><a href="#">Separated link</a></li>-->
+                <!--</ul>-->
+              </div>
+              <a href="<%= new_sale_path%>" class="btn btn btn-sm btn-primary"><i class="fa fa-plus"></i> Create</a>
+              <!--<a href="#new-item-category" data-toggle="new-item-category" class="btn btn-sm btn-success"><i class="fa fa-plus"></i> Create</a>-->
+            </div>
+            <div class="col-sm-4 m-b-xs">
+              <%= form_for item_categories_path do |f| %>
+                  <div class="input-group">
+                    <%= f.text_field :name , class: "input-sm form-control"  , placeholder: "Search Coming Soon" %>
+                    <span class="input-group-btn">
+                        <%= f.button "Go!" , class: "btn btn-sm btn-default" %>
+                    </span>
+                  </div>
+              <%end%>
+
+            </div>
+
+
+          </div>
+        </header>
+        <section class="scrollable wrapper w-f">
+          <section class="panel panel-default">
+            <div class="table-responsive">
+              <table class="table table-striped m-b-none">
+                <thead>
+                <tr>
+                  <!--<th width="20"><input type="checkbox"></th>-->
+                  <th>#</th>
+                  <th>Created</th>
+                  <th>Customer</th>
+                  <th>Total</th>
+                  <th>Tax</th>
+                  <th>Paid</th>
+                  <th>Balance</th>
+                  <th><span class="pull-right">Actions</span></th>
+                </tr>
+                </thead>
+                <tbody>
+                <% @sales.each do |sale| %>
+                    <tr>
+                      <!--<td><input type="checkbox" name="user[]" value="<%#= user.id %>"></td>-->
+                    <tr class="<%= sale.remaining_balance == 0.00 && !sale.total_amount.blank? ? 'success' : '' %>">
+                      <td><%= sale.id %></td>
+                      <td><%= sale.created_at.strftime("%m/%d/%y %I:%M:%S %p")  %></td>
+                      <td><%= sale.customer.blank? ? '-' : sale.customer.last_name %></td>
+                      <td><%= number_to_currency(sale.total_amount, unit: config.currency) %></td>
+                      <td><%= number_to_currency(sale.tax, unit: config.currency) %></td>
+                      <td><%= number_to_currency(sale.paid_total, unit: config.currency) %></td>
+                      <td><%= sale.remaining_balance == 0.00 && sale.payments.count > 0 ? "Paid" : "#{number_to_currency(sale.remaining_balance, unit: config.currency)}" %></td>
+                      <td class="text-right">
+                        <%=link_to raw("<i class= 'fa fa-pencil'></i>"),edit_sale_path(sale), class: "btn btn-info"%>
+                        <%=link_to raw("<i class= 'fa fa-times'></i>"),sale, class: "btn btn-danger",:method => :delete, data: {:confirm => "Are you sure?"}%>
+                      </td>
+                    </tr>
+                <% end %>
+                </tbody>
+              </table>
+            </div>
+          </section>
+        </section>
+        <footer class="footer bg-white b-t">
+          <div class="row text-center-xs pull-right" style="margin: 0px 2%;">
+            <%= will_paginate @sales, renderer: BootstrapPagination::Rails %>
+          </div>
+
+        </footer>
+      </section>
+    </aside>
+  </section>
+  <a href="#" class="hide nav-off-screen-block" data-toggle="class:nav-off-screen" data-target="#nav"></a>
+</section>
+  <%#= render :partial => 'template/sales_summary' %>
