--- a/app/views/template/_menu.html.erb
+++ b/app/views/template/_menu.html.erb
@@ -49,7 +49,7 @@
     </li>
     <li>
       <div class="m-t m-l">
-        <a href="#" class="dropdown-toggle btn btn-xs btn-primary" title="Upgrade"><i class="fa fa-long-arrow-up"></i></a>
+        <a href="<%= dashboard_index_path %>" class="dropdown-toggle btn btn-xs btn-primary" title="Upgrade"><i class="fa fa-long-arrow-up"></i></a>
       </div>
     </li>
   </ul>
