css and helper method fixes

--- a/app/views/template/_left_aside.html.erb
+++ b/app/views/template/_left_aside.html.erb
@@ -43,14 +43,14 @@
                 </li>
             <% end %>
             <li >
-              <a href="<%= item_categories_path %>" class="<%= item_categories_active%>" >
+              <a href="<%= "#" %>" class="<%= " #" %>" >
                 <i class="fa fa-rocket icon">
                   <b class="bg-success"></b>
                 </i>
                 <span>Expenses</span>
               </a>
             </li>
-            <li class="<% reports_active%>" >
+            <li class="<%= reports_active%>" >
               <a href="<%= reports_path %>" class="<% reports_active%>" >
                 <i class="fa fa-pencil-square-o icon">
                   <b class="bg-info"></b>
@@ -102,16 +102,14 @@
                   </a>
                 </li>
 
-            <% if current_user.can_update_users  == true %>
-                <li  class="<%= "#"  %>">
-                  <a href="<%= sales_path %>"  class="<%= "#"  %>" >
+                <li  class="<%= sales_active  %>">
+                  <a href="<%= sales_path %>"  class="<%= sales_active  %>" >
                     <i class="fa fa-user icon">
                       <b class="bg-danger"></b>
                     </i>
                     <span>SALES</span>
                   </a>
                 </li>
-            <% end %>
           </ul>
         </nav>
         <!-- / nav -->
