--- a/app/views/sales/index.html.erb
+++ b/app/views/sales/index.html.erb
@@ -69,6 +69,7 @@
                       <td><%= number_to_currency(sale.paid_total, unit: config.currency) %></td>
                       <td><%= sale.remaining_balance == 0.00 && sale.payments.count > 0 ? "Paid" : "#{number_to_currency(sale.remaining_balance, unit: config.currency)}" %></td>
                       <td class="text-right">
+                        <%=link_to raw("<i class= 'fa fa-print'></i>"),edit_sale_path(sale), class: "btn btn-dark"%>
                         <%=link_to raw("<i class= 'fa fa-pencil'></i>"),edit_sale_path(sale), class: "btn btn-info"%>
                         <%=link_to raw("<i class= 'fa fa-times'></i>"),sale, class: "btn btn-danger",:method => :delete, data: {:confirm => "Are you sure?"}%>
                       </td>
