landing page changes

--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -2,25 +2,36 @@
 <section id="content">
   <div class="bg-info dk">
     <div class="text-center wrapper">
-      <div class="m-t-xl m-b-xl">
-        <div class="text-uc h1 font-bold inline">
-          <div class="pull-left m-r-sm text-white">The POS software <span class="font-thin "> that’s</span></div>
-              <div class="carousel slide carousel-fade inline auto aside text-left pull-left pull-none-xs" data-interval="2000">
+      <div class="m-t-xl m-b-xl" style="min-width: 100%;">
+        <div class="text-uc h3 font-bold inline">
+          <div class="pull-left m-r-sm text-white">Tend and Invigorate your business <span class="font-thin "> with</span></div>
+              <div class="carousel slide carousel-fade inline auto aside text-left pull-left pull-none-xs" data-interval="2000" style="min-width: 450px;">
                 <div class="carousel-inner">
                   <div class="item active text-warning">
-                    Simple
+                    inventory management
                   </div>
                   <div class="item text-dark">
-                    Fast
+                    Expense Management
                   </div>
                   <div class="item">
-                    Free
+                    Sales Summary
+                  </div>
+                  <div class="item text-danger">
+                    Easy Point of sale
+                  </div>
+                  <div class="item text-warning">
+                    Profit and Loss reviews
+                  </div>
+                  <div class="item text-dark">
+                    Employees Management
+                  </div>
+                  <div class="item">
+                    Multiple location Management
                   </div>
                 </div>
               </div>
         </div>
-        <!--<div class="h4 m-t-sm" style="color: #d1efef!important;">Tending Your Business To Greatness</div>-->
-        <!--<div class="h4  m-t-sm"></div>-->
+        <!--<div class="h4 m-t-sm" style="color: #d1efef!important;"></div>-->
       </div>
       <p class="text-center m-b-xl">
         <a href="<%=new_company_path%>" target="_blank" class="btn btn-lg btn-warning b-white bg-empty m-sm">Get Started</a>
@@ -71,7 +82,7 @@
     <div class="dker pos-rlt">
       <div class="container wrapper">
         <div class="m-t-lg m-b-lg text-center">
-                TENDING YOUR BUSINESS TO GREATNESS
+          Tend360 provides an easy-to-use and advanced inventory management system for small to medium sized businesses.
         </div>
       </div>
     </div>
