--- a/app/views/companies/new.html.erb
+++ b/app/views/companies/new.html.erb
@@ -59,9 +59,9 @@
                     <a href="#" class="btn btn-block btn-lg btn-facebook"><i class="fa fa-fw fa-facebook pull-left"></i> Facebook</a>
                 </div>
 
-                <div class="form-group col-md-6">
-                    <a href="#" class="btn btn-twitter btn-lg btn-block"><i class="fa fa-fw fa-twitter pull-left"></i> Twitter</a>
-                </div>
+                <!--<div class="form-group col-md-6">-->
+                    <!--<a href="#" class="btn btn-twitter btn-lg btn-block"><i class="fa fa-fw fa-twitter pull-left"></i> Twitter</a>-->
+                <!--</div>-->
                 <%end%>
             </div>
         </section>
