--- a/app/views/template/_landing_header.html.erb
+++ b/app/views/template/_landing_header.html.erb
@@ -10,6 +10,30 @@
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav navbar-right">
+        <li class="active">
+          <a href="<%= root_path %>">Home</a>
+        </li>
+        <li>
+          <a href="#">Features</a>
+        </li>
+        <li>
+          <a href="<%= "#" %>">Benifits</a>
+        </li>
+        <li>
+          <a href="<%= "#" %>">Integration</a>
+        </li>
+        <li>
+          <a href="#">Plans &amp; Pricing</a>
+        </li>
+        <li>
+          <a href="<%= "#" %>">Help</a>
+        </li>
+        <li>
+          <a href="#">Blog</a>
+        </li>
+        <li>
+          <a href="#">Thrive App</a>
+        </li>
         <li>
           <% if user_signed_in? %>
               <a href="<%= dashboard_index_path %>">
